[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501"]

[project]
name = "rag-retrieval-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "together>=2.2.0",
]
